[package]
name = "git-export"
version = "0.1.0"
edition = "2021"
authors = ["ddki2068@gmail.com"]
publish = false
homepage = "https://github.com/ddki/git-export"
repository = "https://github.com/ddki/git-export"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
git2 = "0.18.1"

[dev-dependencies]
rustfmt = "0.10.0"
rusty-hook = "0.11.2"

[build-dependencies]
cargo-make = "0.37.5"
