[package]
name = "git-export"
version = "0.0.2"
authors = ["ddki2068@gmail.com"]
description = "Git export command for files of commits. Git 提交记录文件导出命令行工具。"
license = "GPL-3.0"
edition = "2021"
publish = false
homepage = "https://github.com/ddki/git-export"
repository = "https://github.com/ddki/git-export"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
console = "0.15.7"
git2 = "0.18.1"
walkdir = "2.4.0"
zip = "0.6.6"

[dev-dependencies]
rustfmt = "0.10.0"
rusty-hook = "0.11.2"

[build-dependencies]
cargo-make = "0.37.5"

[profile.release]
opt-level = 'z'
debug = false
lto = true
panic = 'abort'
rpath = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
